# BOGY-Projekt

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
diary/: 001-project-setup.md  002-requirements-specification.md  003-parse-svg-tdd.md
docs/: requirements.md
example-files/: LoremIpsumFormular.odt
sign_pdf/: __init__.py  cli.py  parse_svg.py  render_signature.py
tests/: __init__.py  test_cli.py  test_parse_svg.py  test_render_signature.py
